--- a/logeado/home.html
+++ b/logeado/home.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
   <link rel="icon" href="img/logo.png">
 
-  <title>ECO </title>
+  <title>Mi Unidad - ECO </title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
 <body>
   <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
 
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="home.html">
       <img src="img/logo.png" alt="" width="30px" height="30px"> ECO</a>
     <input class="form-control form-control-dark w-100" type="text" placeholder="Buscar" aria-label="Search">
     <ul class="navbar-nav px-3">
@@ -191,7 +191,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Compartir archivo</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Compartir carpeta</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
