--- a/logeado/archivo.html
+++ b/logeado/archivo.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="img/logo.png">
 
-    <title>ECO </title>
+    <title>Edición de Archivos - ECO </title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
 <body>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
 
-        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="home.html">
             <img src="img/logo.png" alt="" width="30px" height="30px"> ECO</a>
         <input class="form-control form-control-dark w-100" type="text" placeholder="Buscar" aria-label="Search">
         <ul class="navbar-nav px-3">
