--- a/public/features.html
+++ b/public/features.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="img/logo.png">
 
-    <title>ECO</title>
+    <title>Características - ECO</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
 
             <main role="main" class="inner cover" style="margin-top: 5%">
                 <div style="max-width: 42rem;" class="mx-auto">
-                    <h1 class="display-4">Features</h1>
+                    <h1 class="display-4">Funcionalidades</h1>
                     <p class="lead">Estas son algunas de las funcionalidades que ofrecemos.</p>
                 </div>
                 <div class="card-deck mb-3 text-center">
