--- a/public/precios.html
+++ b/public/precios.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="img/logo.png">
 
-    <title>ECO</title>
+    <title>Planes - ECO</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
